--- a/index.css
+++ b/index.css
@@ -2,40 +2,34 @@
 	box-sizing: border-box;
 }
 
-h1 {
+h1, h3 {
 	text-align: center;
 }
 
-p {
-	width: 90%;
-	height: 100%;
-	margin-right: auto;
-	margin-left: auto;
-	padding: 30px 5px 5px 5px;
-	font-family: Helvetica;
+.column {
+	margin: 10px auto;
+	padding: 10px;
 }
 
 .box {
 	border: 1px solid black;
 	background-color: lightblue;
 	position: relative;
-	float:left;
-	margin: 15px;
+	float: left;
+	width: 100%;
+	height: 100%;
 }
 
 .inside {
-	position: absolute;
-	background-color: lightgreen;
-	width: 130px;
 	border: 1px solid black;
-	top: 0;
-	left: 0;
+	background-color: lightgreen;
+	width: 35%;	
+	margin-left: 65%;
 }
 
-h3 {
-	text-align: center;
-	margin: 0px;
-	padding: 5px;
+p {
+	padding: 10px;
+	font-family: Helvetica;
 }
 
 .row {
@@ -63,5 +57,12 @@ h3 {
 		width: 100%;
 		float: left;
 		clear: both;
+	}
+}
+
+@media (max-width: 768px){
+	.column {
+		width: 100%;
+		float:left;
 	}
 }
